[package]
name = "knoob-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "knoob-rs"
path = "src/main.rs"

[dependencies]
actix-web   	= "4.13.0"
bitcode     	= "0.6.9"
include_dir 	= "0.7.4"
libc 	    	= "0.2.182"
lmdb        	= "0.8.0"
mime_guess 	= "2.0.5"
serde       	= { version = "1.0.228", features = ["derive"] }
tokio       	= { version = "1.49.0", features = ["full"] }
tracing 	= "0.1.44"

[build-dependencies]
bindgen = "0.72.1"
cc      = "1.2.56"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
